--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nulla perspiciatis adipisci animi! Asperiores dolor ducimus quam voluptatum? Velit debitis quaerat commodi sit atque non dolore necessitatibus, reprehenderit blanditiis laboriosam.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo dignissimos modi corrupti amet eveniet doloribus sapiente nobis vitae excepturi perspiciatis temporibus, impedit et aperiam quasi esse enim itaque non vero?</p>
         </article>
     </main>
 </body>
