--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="Lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nulla perspiciatis adipisci animi! Asperiores dolor ducimus quam voluptatum? Velit debitis quaerat commodi sit atque non dolore necessitatibus, reprehenderit blanditiis laboriosam.</p>
+            <p><a href="">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="Lado" src="imagens/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo dignissimos modi corrupti amet eveniet doloribus sapiente nobis vitae excepturi perspiciatis temporibus, impedit et aperiam quasi esse enim itaque non vero?</p>
+            <p><a href="">Acesse o Curso de JavaScript</a></p>
         </article>
     </main>
 </body>
