--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nulla perspiciatis adipisci animi! Asperiores dolor ducimus quam voluptatum? Velit debitis quaerat commodi sit atque non dolore necessitatibus, reprehenderit blanditiis laboriosam.</p>
+            <p><a href="curso.html">Acesse o Curso HTML</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo dignissimos modi corrupti amet eveniet doloribus sapiente nobis vitae excepturi perspiciatis temporibus, impedit et aperiam quasi esse enim itaque non vero?</p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
